--- a/styles/sass/custom/_custom-variables.scss
+++ b/styles/sass/custom/_custom-variables.scss
@@ -230,7 +230,7 @@ $input-height:							33px;
 // Background Color
 // $color-btn-bg-default: 				$color-default;
 // $color-btn-bg-inverse: 				$color-inverse;
-$color-btn-bg-primary:           rgba(0, 0, 0, 0.5);
+$color-btn-bg-primary:           rgba(255, 255, 255, 0.5);
 // $color-btn-bg-info: 					$color-info;
 // $color-btn-bg-success: 				$color-success;
 // $color-btn-bg-warning: 				$color-warning;
@@ -240,7 +240,7 @@ $color-btn-bg-primary:           rgba(0, 0, 0, 0.5);
 // Text Color
 // $color-btn-text-default: 			$color-text-black;
 // $color-btn-text-inverse: 			#FFF;
-$color-btn-text-primary: 			#A6A6A6;
+$color-btn-text-primary: 			#FFF;
 // $color-btn-text-info: 				#FFF;
 // $color-btn-text-success: 			#FFF;
 // $color-btn-text-warning: 			#FFF;
