--- a/styles/css/custom/custom.css
+++ b/styles/css/custom/custom.css
@@ -55,17 +55,8 @@ a:hover {
 }
 
 .btn-primary.btn-bordered {
-  /*  background-color: transparent;
-    color: #A6A6A6;*/
-}
-.btn-primary.btn-bordered:hover {
-  /*background-color: #A6A6A6;
-  color: #FFF;
-  border: 1px solid #A6A6A6;*/
-}
-.btn-primary:hover {
-  /*background-color:#000;
-  border:1px solid #000;*/
+  color: #fff;
+  border: 1px solid #fff;
 }
 
 .btn-inverse {
