--- a/styles/sass/custom/components/_buttons.scss
+++ b/styles/sass/custom/components/_buttons.scss
@@ -36,17 +36,14 @@
 }
 .btn-primary {
     &.btn-bordered {
-      /*  background-color: transparent;
-        color: #A6A6A6;*/
+      color: #fff;
+        border:1px solid #fff;
         &:hover {
-          /*background-color: #A6A6A6;
-          color: #FFF;
-          border: 1px solid #A6A6A6;*/
+
         }
     }
     &:hover {
-      /*background-color:#000;
-      border:1px solid #000;*/
+
     }
 }
 .btn-inverse {
