--- a/styles/sass/custom/_custom-variables.scss
+++ b/styles/sass/custom/_custom-variables.scss
@@ -392,7 +392,7 @@ $font-navsidebar-size:					16px;
 // $font-navsidebar-sub-size:			$font-size-small;
 // $font-navtopbar-sub-size:			$font-size-small;
 
-// $font-navsidebar-glyph-size:			1.2em;
+$font-navsidebar-glyph-size:			1em;
 // $font-navtopbar-glyph-size:			1.2em;
 
 // Navigation sidebar
