--- a/styles/sass/custom/buildingblocks/_profileheader.scss
+++ b/styles/sass/custom/buildingblocks/_profileheader.scss
@@ -7,14 +7,14 @@
 /*
 * Profile Header
 *
-* 
+*
 */
 
 .profileheader {
-	
+			/* Styles here */
 
 	.profileheader-content {
-		
+			/* Styles here */
 	}
 
 	.profileheader-image {
