--- a/styles/sass/custom/components/_navigationlist.scss
+++ b/styles/sass/custom/components/_navigationlist.scss
@@ -20,10 +20,11 @@
 // Default Mendix Navigation List Widget with hover
 // ==========================================================================
 .navigationlist-hover.mx-navigationlist {
+	/* Styles here */
 	.mx-navigationlist-item {
 		&:hover,
 		&:active {
-			
+
 		}
 	}
 }
@@ -36,7 +37,7 @@
 // ==========================================================================
 .navigationlist-lined.mx-navigationlist {
 	.mx-navigationlist-item {
-
+		/* Styles here */
 		&:first-child {
 
 		}
