--- a/styles/sass/custom/components/_tabcontainer.scss
+++ b/styles/sass/custom/components/_tabcontainer.scss
@@ -61,7 +61,7 @@
 //==========================================================================
 .tab-lined.mx-tabcontainer {
 	.mx-tabcontainer-tabs {
-
+		/* Styles here */
         li {
 
             > a {
@@ -89,7 +89,7 @@
 //==========================================================================
 .tab-justified.mx-tabcontainer {
 	.mx-tabcontainer-tabs {
-
+		/* Styles here */
 		> li {
 
 			@media (max-width: 768px) {
@@ -119,7 +119,7 @@
 // Default Mendix Tab Container Widget rendered with borders
 //==========================================================================
 .tab-bordered.mx-tabcontainer {
-
+		/* Styles here */
 	.mx-tabcontainer-tabs {
 
 	}
