--- a/styles/sass/custom/layouts/_base.scss
+++ b/styles/sass/custom/layouts/_base.scss
@@ -9,8 +9,12 @@
 		/* Styles here */
 	}
 }
-.region-sidebar {
+.region-sidebar,
+.region-sidebar-fixed {
 	/* Styles here */
+	&.mx-scrollcontainer-toggleable {
+		background-color: $color-inverse;
+	}
 	> .mx-layoutcontainer-wrapper {
 		/* Styles here */
 	}
@@ -42,7 +46,7 @@
    Used to style your app brand and logo
 ========================================================================== */
 .navbar-brand {
-	padding: 31px 45px;
+	padding: 28px 45px;
 	margin-left: -22px;
 	img {
 		height: 25px;
