--- a/styles/css/custom/custom.css
+++ b/styles/css/custom/custom.css
@@ -4,7 +4,7 @@
    Default settings
 ========================================================================== */
 body {
-  background-image: url(../../../img/background.png);
+  background-image: url(../../../img/background.jpg);
   background-size: 100% 100%;
   background-attachment: fixed;
   background-repeat: no-repeat;
