fixed background file

--- a/styles/css/custom/custom.css
+++ b/styles/css/custom/custom.css
@@ -828,7 +828,7 @@ body[dir="ltr"] .mx-header {
 .page-dashboard {
   background-color: transparent;
   background-color: #eff4f7;
-  background-image: url(../../../img/background.png);
+  background-image: url(../../../img/background.jpg);
   background-size: cover;
   background-position: top center;
 }
