--- a/styles/sass/custom/pagetemplates/responsive/_page-dashboard.scss
+++ b/styles/sass/custom/pagetemplates/responsive/_page-dashboard.scss
@@ -4,7 +4,7 @@
 .page-dashboard {
 	background-color: $color-layout-bg-secondary;
 	background-color: #eff4f7;
-	background-image: url(../../../img/background.png);
+	background-image: url(../../../img/background.jpg);
 	background-size: cover;
 	background-position: top center;
 	.chartjs-node {
