--- a/styles/css/lib/lib.css
+++ b/styles/css/lib/lib.css
@@ -3893,14 +3893,6 @@ body .mx-header .mx-header-right .mx-placeholder {
   display: table-cell;
   vertical-align: middle;
 }
-body .mx-header .mx-header-left {
-  left: 0;
-  text-align: left;
-}
-body .mx-header .mx-header-right {
-  right: 0;
-  text-align: right;
-}
 body .mx-header .mx-link {
   color: #3D3F41;
 }
@@ -3918,6 +3910,18 @@ body .mx-header .mx-title {
 }
 body .mx-header .btn-image.glyphicon {
   font-size: 21px;
+}
+
+body[dir="ltr"] .mx-header-left,
+body[dir="rtl"] .mx-header-right {
+  left: 0;
+  text-align: left;
+}
+
+body[dir="rtl"] .mx-header-left,
+body[dir="ltr"] .mx-header-right {
+  right: 0;
+  text-align: right;
 }
 
 /*
