--- a/styles/css/lib/lib.css
+++ b/styles/css/lib/lib.css
@@ -1170,10 +1170,13 @@ textarea.form-control, textarea.readonly-input {
   background-color: #dbdcdd;
 }
 .dijitCalendarContainer .dijitCalendarYearContainer td {
-  font-weight: bold;
-  border-bottom-radius: 3px;
   border-top: 1px solid rgba(221, 221, 221, 0.41);
   text-align: center;
+  color: #000;
+}
+.dijitCalendarContainer .dijitCalendarYearContainer td .dijitCalendarSelectedYear {
+  font-weight: bold;
+  text-decoration: underline;
 }
 .dijitCalendarContainer .dijitCalendarMonthContainer th:first-child {
   border-top-left-radius: 3px;
