--- a/styles/sass/custom/components/_navigation.scss
+++ b/styles/sass/custom/components/_navigation.scss
@@ -146,7 +146,7 @@
    Default Mendix Simple Menu Bar
 ========================================================================== */
 .mx-menubar {
-	/* Styles here */
+	background-color: $color-inverse;
 	ul.mx-menubar-list {
 		/* Styles here */
 		li.mx-menubar-item {
