--- a/styles/sass/custom/buildingblocks/_wizard.scss
+++ b/styles/sass/custom/buildingblocks/_wizard.scss
@@ -10,23 +10,16 @@
 	}
 }
 .wizard-step {
-	padding:0;
-	background-color: rgba(71, 84, 105, 0.81);
-	border: none;
-	color: $color-text-white;
-}
-.wizard-step-number {
 	/* Styles here */
 }
+.wizard-step-number {
+	padding: 0;
+}
 .wizard-step-number-active {
-	padding:0;
-	background-color: rgba(71, 84, 105, 0.81);
-	border: none;
+	/* Styles here */
 }
 .wizard-step-number-visited {
-	padding: 0;
-	background-color: #ffcb00;
-	border: none;
+	/* Styles here */
 }
 .wizard-step-title {
 	/* Styles here */
